# redpen

./: .gitignore  LICENSE  README.md  pyproject.toml  redpen-stress
.claude/commands/: check.md  checkall.md
docs/: README.md  demo.tape  gen_demo.sh  mascot_ansi.txt  mascot_ansi_256.txt  redpen.example.yml
redpen/: __init__.py  __main__.py  _miniyaml.py  baseline.py  changeset.py  claims.py  cli.py  config.py  contradiction.py  customrules.py  engine.py  hook.py  judge.py  lastrun.py  ledger.py  patterns.py  render.py  transcript.py  util.py
redpen/probes/: __init__.py  base.py  custom_probe.py  file_probes.py  gh_probes.py  git_probes.py  meta_probes.py  pack_probes.py  run_probes.py  transcript_probes.py
tests/: conftest.py  test_claim_extraction.py  test_contradiction.py  test_customrules.py  test_dogfood_bugs.py  test_exit_code_scan.py  test_explain_baseline.py  test_file_present.py  test_git_clean.py  test_git_pushed.py  test_hook.py  test_judge.py  test_non_git.py  test_pack_probes.py  test_probe_edges.py  test_rendering.py  test_session_scoping.py  test_stress.py  test_transcript_discovery.py
tests/fixtures/: failing_session.jsonl  sample_session.jsonl  sorting_algorithms_session.jsonl
tests/stress/: __main__.py  cases.py  harness.py  last_report.md  live.py  soak.py
tests/stress_hard/: README.md  conftest.py  known_findings.py  last_report.md  requirements.txt  run_report.py  test_concurrency.py  test_latency.py  test_live.py  test_stress_hard.py
tests/stress_ultra/: conftest.py  last_report.md  requirements.txt  run_report.py  test_concurrency.py  (+4 more)
(+20 files in other folders)
